why choose paragraph spacing issue resolved

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1678,6 +1678,7 @@ main>.section.previous-studies-tab.tabs-container {
             margin: 0;
             width: 100%;
             max-width: unset;
+            padding-bottom: 14px;
 
             @media screen and (width > 768px) {
               max-width: 510px;
